// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fields/RadioGroup.tsx should render 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-3 mb-2 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="mr-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="appearance"
            >
              Appearance
            </label>
          </div>
          <div
            aria-labelledby="appearance"
            class="flex items-center space-x-4"
            role="group"
          >
            <div
              class="flex items-center"
            >
              <input
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
                id="appearance_one"
                name="appearance"
                type="radio"
                value="one"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
                for="appearance_one"
              >
                Value 1
              </label>
            </div>
            <div
              class="flex items-center"
            >
              <input
                checked=""
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
                id="appearance_two"
                name="appearance"
                type="radio"
                value="two"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
                for="appearance_two"
              >
                Value 2
              </label>
            </div>
          </div>
        </div>
        <div
          class="mt-1 text-xs italic text-gray-500 dark:text-gray-300"
        >
          This is some helper text
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-3 mb-2 text-sm"
    >
      <div
        class="flex items-start"
      >
        <div
          class="mr-3"
        >
          <label
            class="font-medium text-gray-700 dark:text-gray-200"
            for="appearance"
          >
            Appearance
          </label>
        </div>
        <div
          aria-labelledby="appearance"
          class="flex items-center space-x-4"
          role="group"
        >
          <div
            class="flex items-center"
          >
            <input
              class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
              id="appearance_one"
              name="appearance"
              type="radio"
              value="one"
            />
            <label
              class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
              for="appearance_one"
            >
              Value 1
            </label>
          </div>
          <div
            class="flex items-center"
          >
            <input
              checked=""
              class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
              id="appearance_two"
              name="appearance"
              type="radio"
              value="two"
            />
            <label
              class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
              for="appearance_two"
            >
              Value 2
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 text-xs italic text-gray-500 dark:text-gray-300"
      >
        This is some helper text
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/fields/RadioGroup.tsx should render as disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mt-3 mb-2 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="mr-3"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="appearance"
              style="text-decoration: line-through;"
            >
              Appearance
            </label>
          </div>
          <div
            aria-labelledby="appearance"
            class="flex items-center space-x-4"
            role="group"
          >
            <div
              class="flex items-center"
            >
              <input
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
                disabled=""
                id="appearance_one"
                name="appearance"
                type="radio"
                value="one"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
                for="appearance_one"
              >
                Value 1
              </label>
            </div>
            <div
              class="flex items-center"
            >
              <input
                checked=""
                class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
                disabled=""
                id="appearance_two"
                name="appearance"
                type="radio"
                value="two"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
                for="appearance_two"
              >
                Value 2
              </label>
            </div>
          </div>
        </div>
        <div
          class="mt-1 text-xs italic text-gray-500 dark:text-gray-300"
        >
          This is some helper text
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mt-3 mb-2 text-sm"
    >
      <div
        class="flex items-start"
      >
        <div
          class="mr-3"
        >
          <label
            class="font-medium text-gray-700 dark:text-gray-200"
            for="appearance"
            style="text-decoration: line-through;"
          >
            Appearance
          </label>
        </div>
        <div
          aria-labelledby="appearance"
          class="flex items-center space-x-4"
          role="group"
        >
          <div
            class="flex items-center"
          >
            <input
              class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
              disabled=""
              id="appearance_one"
              name="appearance"
              type="radio"
              value="one"
            />
            <label
              class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
              for="appearance_one"
            >
              Value 1
            </label>
          </div>
          <div
            class="flex items-center"
          >
            <input
              checked=""
              class="size-4 border-gray-300 text-indigo-600 focus:ring-indigo-500 cursor-pointer"
              disabled=""
              id="appearance_two"
              name="appearance"
              type="radio"
              value="two"
            />
            <label
              class="ml-3 block text-sm font-medium text-gray-700 dark:text-white cursor-pointer"
              for="appearance_two"
            >
              Value 2
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 text-xs italic text-gray-500 dark:text-gray-300"
      >
        This is some helper text
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
